# enclosure

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/affine-arith/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
crates/affine-arith/src/: condense.rs  elementary.rs  form.rs  kani_harness.rs  lib.rs  ops.rs  symbol.rs  trig.rs
crates/affine-arith/tests/: composition_fixture.rs  condense_fixture.rs  elementary_domain_fixture.rs  elementary_fixture.rs  enclosure_fixture.proptest-regressions  enclosure_fixture.rs  ops_fixture.rs  persistent_fixture.rs  tightness_fixture.rs  trig_fixture.rs
crates/elementary-oracle/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
crates/elementary-oracle/src/: lib.rs
crates/elementary-oracle/tests/: arithmetic.rs  oracle.rs
crates/interval-1788/: CHANGELOG.md  Cargo.toml
crates/interval-1788/docs/: conformance.md
crates/interval-1788/docs/decisions/: 0001-inf-sup-representation-and-invariant.md  0002-roundfloat-trait-shape.md  0003-kani-over-f64-fixture.md  0004-elementary-functions-opener.md  0005-v1-road-full-conformance.md  0006-reverse-operations.md  0007-set-dec-conforms-and-strict-variant.md
crates/interval-1788/src/: cancel.rs  decorated.rs  decoration.rs  elementary.rs  error.rs  f64_impl.rs  functions.rs  interval.rs  inverse.rs  kani_harness.rs  lib.rs  ops.rs  point.rs  reverse.rs  spec.rs  text_io.rs  trig.rs
crates/interval-1788/tests/: atan2_fixture.rs  cancel_fixture.rs  conformance_arith_tight.rs  conformance_reverse_tight.rs  decorated_fixture.rs  elementary_fixture.rs  enclosure_fixture.rs  exp_log_fixture.rs  functions_fixture.rs  inverse_fixture.rs  numeric_boolean_fixture.rs  point_functions_fixture.rs  reverse_abs_rev_fixture.rs  reverse_mul_rev_fixture.rs  reverse_pow_rev_fixture.rs  reverse_property.rs  reverse_rev_fixture.rs  text_io_fixture.rs  trig_pow_fixture.rs
crates/round-float/: CHANGELOG.md  Cargo.toml  README.md
crates/round-float/docs/decisions/: 0001-round-transcendental-extension-trait.md  0002-tight-f64-backend.md  0003-round-integer-exact-trait.md  0004-pown-exact-integer-kernel.md
crates/round-float/src/: f64_impl.rs  kulisch.rs  lib.rs  pown_kernel.rs  tight_f64.rs
crates/round-float/tests/: pown_oracle.rs  reduction_conformance.rs  reduction_oracle.rs  tight_adjacency_fixture.rs  tight_oracle.proptest-regressions  tight_oracle.rs
crates/round-float/tests/common/: mod.rs
docs/decisions/: 0001-enclosure-monorepo-and-round-float-layering.md  0002-affine-elementary-functions.md  0002-roundfloat-trait-shape.md  0003-kani-over-f64-fixture.md  0003-unscoped-symbol-source.md  0004-noise-term-condensation.md  0005-transcendental-growth-trig-hyp-pow.md  0006-affine-verification-lane.md  0007-transcendental-growth-round-two.md  0008-reduction-operations-kulisch-accumulator.md  0009-largest-finite-capability.md  ADR-DRAFT-transcendental-growth-trig-hyp-pow.md
docs/references/: INDEX.md  README.md  aaflib.md  astro-float-oracle.md  boldo-daumas-2003.md  comba-stolfi-1993.md  combastel-2003.md  failure-museum.md  figueiredo-stolfi-2004.md  filib-pp.md  girard-2005-zonotope-reachability.md  glossary.md  goldberg-1991.md  gum-jcgm-100.md  ieee-1788-1-2017.md  ieee-1788-2015.md  ieee-754-2019.md  interval-computations-site.md  intlab-rump.md  itf1788-framework.md  johansson-2017-arb.md  kearfott-2013-p1788-overview.md  kernel-map.md  kopetzki-schurmann-althoff-2017.md  kulisch-2008-p1788-draft.md  kulisch-computer-arithmetic.md  kv-kashiwagi.md  libaffa.md  libieeep1788-nehmeier.md  makino-berz-2003-taylor-models.md  messine-2002-extensions-affine.md  messine-touhami-2006.md  moore-1966.md  mpfi.md  muller-handbook-fp.md  muller-irram.md  musl-libm-accuracy.md  octave-interval-heimlich.md  ogita-rump-oishi-2005.md  p1788-1-d98-draft.md  (+16 more)
scripts/: check_references.py
src/: decorated.rs  f64_impl.rs  functions.rs  interval.rs  kani_harness.rs  lib.rs  round.rs
tests/: decorated_fixture.rs  enclosure_fixture.rs
