[package]
name = "affine-arith"
# 0.1.0 carries the form and its interval round-trip, the arithmetic (including
# the rigor-critical multiply), and the Chebyshev elementary functions. The API
# may break between 0.x releases. publish = false while the family is early.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stolfi affine arithmetic over a directed-rounding float: the form, the arithmetic, and Chebyshev elementary functions."
keywords = ["affine-arithmetic", "interval", "rigorous", "no-std", "numerics"]
categories = ["mathematics", "no-std", "science"]
readme = "README.md"
publish = false

[dependencies]
# The documented layering: affine-arith depends on interval-1788 (range
# reduction, and the `Interval` an affine form reduces to) and on round-float
# (the directed-rounding contract the form is generic over). interval-1788 is
# pulled without default features so the affine crate stays no_std + alloc.
round-float = { path = "../round-float" }
interval-1788 = { path = "../interval-1788", default-features = false }

[features]
# The verification and host-test lane runs over round-float's f64 fixture (sound,
# not tight), the same instance interval-1788 verifies on.
fixture = ["round-float/f64"]

[dev-dependencies]
proptest = "1"

# The property lanes exercise the f64 fixture instance.
[[test]]
name = "enclosure_fixture"
required-features = ["fixture"]

[[test]]
name = "ops_fixture"
required-features = ["fixture"]

[[test]]
name = "elementary_fixture"
required-features = ["fixture"]

[[test]]
name = "persistent_fixture"
required-features = ["fixture"]

[[test]]
name = "condense_fixture"
required-features = ["fixture"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Affine arithmetic uses short symbolic names (the sorted-merge indices and the
# value/error pairs) and does deliberate float comparisons; let clippy not fight
# the kernel's vocabulary.
similar_names = "allow"
float_cmp = "allow"
many_single_char_names = "allow"
