[package]
name = "interval-1788"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
# Now a member of the `enclosure` workspace; the repository points at the family.
repository.workspace = true
description = "Pure Rust rigorous interval arithmetic (IEEE 1788-2015, inf-sup), generic over a directed-rounding float."
# "verified" was deliberately dropped from the keywords: Kani discharges the
# discrete set-based logic and the decoration lattice, but the numeric enclosure
# rests on the spec laws and property tests, and a keyword cannot carry that
# nuance honestly.
keywords = ["interval", "ieee-1788", "rigorous", "no_std", "enclosure"]
categories = ["mathematics", "no-std", "science"]
readme = "README.md"
# Not published while the SMIL consumer pins it by git and the crate is early.
# The no-review posture (see README "How interval-1788 is developed") is the
# deliberate reason it is not on crates.io yet.
publish = false

[features]
# The core (the re-exported `RoundFloat` trait and `Interval<F>`) is no_std and
# depends only on `round-float`. `std` only adds `std::error::Error` for
# `IntervalError`.
default = ["std"]
std = []

# The `f64` instance of `RoundFloat`, supplied by `round-float`'s `f64` feature.
# It is a verification and host-test FIXTURE, not a production interval float: it
# trades tightness for CBMC-checkability (sound `next_after` widening, never
# under-rounding). Tight enclosure is a property of a correctly-rounded backend
# (ferrodec Decimal128, pfloat), checked elsewhere.
fixture = ["round-float/f64"]

[dependencies]
round-float = { path = "../round-float" }

[dev-dependencies]
proptest = "1"

# The property lanes exercise the f64 fixture instance.
[[test]]
name = "enclosure_fixture"
required-features = ["fixture"]

[[test]]
name = "functions_fixture"
required-features = ["fixture"]

[[test]]
name = "decorated_fixture"
required-features = ["fixture"]

[[test]]
name = "elementary_fixture"
required-features = ["fixture"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# IEEE interval math does deliberate width/sign casts and uses short symbolic
# endpoint names; let clippy not fight the kernel's chosen vocabulary.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
float_cmp = "allow"
# The directed-rounding trait methods return `Self`; their results are always
# consumed into an endpoint at the call site. `#[must_use]` on each of the ten
# would be noise on a low-level arithmetic contract.
return_self_not_must_use = "allow"
