[package]
name = "round-float"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The directed-rounding float contract for rigorous numerics: split-direction (down/up) arithmetic, generic and no_std."
keywords = ["rounding", "interval", "rigorous", "no-std", "numerics"]
categories = ["mathematics", "no-std", "science"]
readme = "README.md"
# Not published while the family is early and the consumers pin it by path. The
# no-review posture (see README "How round-float is developed") is the
# deliberate reason it is not on crates.io yet.
publish = false

[features]
# The default is the bare trait, depending on nothing. The `f64` instance is a
# verification and host-test FIXTURE, sound but not tight (outward `next_after`
# widening, never under-rounding), shared by the enclosure crates' proof and
# property lanes. `libm::sqrt` keeps it no_std-capable.
f64 = ["dep:libm"]

# The `f64-tight` instance (`TightF64`) is the correctly rounded directed backend:
# it derives each operation's exact rounding-error sign from an error-free
# transform and steps one float outward only when the result is unrepresentable.
# It needs `libm::fma`, `libm::sqrt`, `libm::frexp`, and `libm::scalbn`, all
# no_std-capable. Additive to `f64`: the fixture and the tight instance coexist.
f64-tight = ["dep:libm"]

[dependencies]
libm = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
# The tight backend's property and adjacency lanes; matches the sibling crates.
proptest = "1"
# The independent exact reference for the reduction property lane: pure Rust,
# stable, arbitrary precision (the workspace's canonical MPFR replacement). It
# computes the exact sum and dot at a precision wide enough to be exact for the
# bounded test vectors, and the tight results are checked to be its correctly
# rounded value. Test-only; the shipped crate never depends on it.
astro-float = { version = "0.9", default-features = false, features = ["std"] }

# The adjacency invariant, exactness detection, and the fixture envelope.
[[test]]
name = "tight_adjacency_fixture"
required-features = ["f64-tight", "f64"]

# The independent integer reference oracle and the hard-case vector catalogue.
[[test]]
name = "tight_oracle"
required-features = ["f64-tight", "f64"]

# The 15 hand-translated ITF1788 reduction conformance vectors over TightF64.
[[test]]
name = "reduction_conformance"
required-features = ["f64-tight"]

# The astro-float exact-reference property lane and the oracle-free
# mode-consistency properties for the Kulisch reductions.
[[test]]
name = "reduction_oracle"
required-features = ["f64-tight"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
# The Kani proofs in `src/kulisch.rs` are gated on `cfg(kani)`, a cfg cargo-kani
# sets and a plain `cargo build` does not. Declaring it keeps the unexpected_cfgs
# lint quiet, matching the sibling crates.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# The directed-rounding trait methods return `Self`; their results are always
# consumed into an endpoint at the call site. `#[must_use]` on each would be
# noise on a low-level arithmetic contract.
return_self_not_must_use = "allow"
